# ML-Portfolio

./: .gitignore  K means.ipynb  PCA dog cat.ipynb  PCA-dog-cat.ipynb  README.md  Swiss roll manifold.ipynb  XOR SVM.ipynb  pyproject.toml
.ipynb_checkpoints/: Swiss roll manifold-checkpoint.ipynb
Experiments/AE_MNIST/: AE_MNIST.ipynb  README.md  SparseCAE.py  autoencoder_test.ipynb
Experiments/dog_cat_classifier/: DogCatClassifier.ipynb  README.md
Experiments/dog_cat_pca/: README.md  dog_cat_pca.ipynb
Experiments/k_means/: K-means.ipynb  README.md
Experiments/object_detection_clustering/: README.md  object_detection_clustering.ipynb
Experiments/svm_test/: README.md  svm_test.ipynb
Experiments/swiss_roll_manifold/: README.md  Swiss roll manifold.ipynb
helpers/: matrix_visualizer.ipynb
helpers/.ipynb_checkpoints/: matrix_visualizer-checkpoint.ipynb
